--- a/components/ui/Banner/Banner.module.scss
+++ b/components/ui/Banner/Banner.module.scss
@@ -6,7 +6,7 @@
   z-index: theme.$z-mid;
   color: var(--color-text-white);
   background-color: var(--color-bg-brand);
-  filter: theme.$drop-shadow-md;
+  box-shadow: theme.$box-shadow-md;
   @include theme.transition(background-color, color);
 
   &.banner-bottom {
